aws-ec2/main.tf
terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = "6.30.0"
    }
  }
}

provider "aws" {
  # Configuration options
  region = "ap-south-1"
}

#Creating VPC
resource "aws_vpc" "my-vpc" {
  cidr_block = "10.1.0.0/16"
  tags = {
    Name = "my_vpc"
  }
}

resource "aws_subnet" "private-subnet" {
  cidr_block = "10.1.1.0/24"
  vpc_id = aws_vpc.my-vpc.id
  availability_zone = "ap-south-1a"
  tags = {
    Name = "private-subnet"
  }
}

resource "aws_subnet" "public-subnet" {
  cidr_block = "10.1.2.0/24"
  vpc_id = aws_vpc.my-vpc.id
  availability_zone = "ap-south-1a"
  tags = {
    Name = "public-subnet"
  }
}
#Internet Gateway
resource "aws_internet_gateway" "my-igw" {
  vpc_id = aws_vpc.my-vpc.id
  tags = {
    Name = "my-igw"
  }
}
#Routing Table
resource "aws_route_table" "my-rt" {
  vpc_id = aws_vpc.my-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my-igw.id
  }
  tags = {
    Name = "my-rt"
  }
}
#Association
resource "aws_route_table_association" "public-sub" {
  route_table_id = aws_route_table.my-rt.id
  subnet_id = aws_subnet.public-subnet.id
}

resource "aws_instance" "ex1-instance" {
    ami = "ami-0ff5003538b60d5ec"
    instance_type = "t3.small"
    subnet_id = aws_subnet.public-subnet.id
    tags = {
      Name = "SampleServer"
    }
}

output "instance_ip" {
  value = aws_instance.ex1-instance.private_ip
}
